# cloudutil

./: .cursorrules  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
ansible/: README.md
cloudutil/: cli.py  helper.py  utils.py
cloudutil/aws/: cli.py  login.py  secrets.py  ssm.py
cloudutil/azure/: cli.py  secrets.py
cloudutil/helper/: __init__.py  fzf_view.py
cloudutil/k8s/: cli.py  configmap.py  secrets.py  util.py
cloudutil/os_utils/: cli.py  yaml_diff.py
cloudutil/psst/: cli.py
cloudutil/sql/: USAGE.md  apply.py  cli.py  example.yaml
cloudutil/sql/ansible/: cloudutil_postgres.py
cloudutil/sql/modules/: __init__.py  base.py  postgres.py
cloudutil/task/: cli.py
copper/: utils.py
copper/aws/: secrets.py
copper/azure/: cli.py  secrets.py
copper/helper/: __init__.py  fzf_view.py
copper/k8s/: cli.py  configmap.py  secrets.py  util.py
copper/os_utils/: cli.py  example.yaml  yaml_diff.py
copper/sql/: USAGE.md  apply.py  cli.py
copper/sql/ansible/: __init__.py  cloudutil_postgres.py
copper/sql/modules/: base.py  postgres.py
src/: helper.py
src/aws/: ssm.py  sts.py
src/cloudutil/: cli.py
src/cloudutil/aws/: common.py  secrets.py  ssm.py  sts.py
test/postgres/: config.yaml  docker-compose.yaml
