[project]
name = "cloudutil"
version = "0.1.0"
description = "AWS utilities for generating console login URLs via STS GetFederationToken and SSM parameter management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.3",
    "typer>=0.16.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "pydantic>=2.11.7",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.workspace]
members = ["."]

[project.scripts]
cloudutil = "cloudutil.cli:main"
