[project]
name = "cloudutil"
version = "0.1.0"
description = "AWS utilities for generating console login URLs via STS GetFederationToken and SSM parameter management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.3",
    "typer>=0.16.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "pydantic>=2.11.7",
    "textual>=6.1.0",
]


[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["src*"]

[project.scripts]
cu = "src.cli:app"
cloudutil = "src.cli:app"
